# connecting-dots-rs

./: Cargo.toml  flake.nix
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  state.rs
src/shaders/: background_image_shader.wgsl  compute_new_positions.wgsl  shader.wgsl
src/volume_providers/: constant_volume_provider.rs  mod.rs  pulse.rs  volume_provider.rs
