[package]
name = "connecting-dots-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pulseaudio"]
pulseaudio = ["dep:libpulse-binding", "dep:libpulse-sys"]

[dependencies]
anyhow = "1.0"
winit = "0.30"
env_logger = "0.11"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.4"
bytemuck = "1.24.0"
rand = "0.9.2"
image = "0.25" 
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libpulse-binding = { version = "2.30", optional = true }
libpulse-sys = { version = "1.23", optional = true }

[profile.dev.package.image]
opt-level = 2

[profile.dev.package.wgpu]
opt-level = 2